--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
-/*
-    Theme Name: Delicious
-    Theme URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-*/
+
 
 body {
 	font-size: 15px;
@@ -30,7 +25,7 @@ table {
 	border-spacing: 0;
 }
 #banner{
-    background: url(../img/banner-bg.jpg) no-repeat center top;
+    background: url(../img/bar.jpg) no-repeat center top;
     background-size: cover;
     min-height: 630px;
 }
@@ -39,12 +34,12 @@ table {
     min-height: 630px;
 }
 #banner h2{
-    font-family: 'Satisfy', sans-serif;
+    font-family: 'Lobster', cursive;
     font-size: 45px;
     color: #FFB03B;
 }
 #banner p{
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Lobster', cursive;
     color: #fcfcfc;
     font-size: 34px;
 }
@@ -52,7 +47,7 @@ table {
     padding: 60px 0px;
 }
 .logo-name{
-    font-family: 'Satisfy', sans-serif;
+    font-family: 'Lobster', cursive;
     font-size: 65px;
     margin-top: 140px;
     color: #FFB03B;
