--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
     line-height: 1.52;
     color: #717f86;
     font-size: 16px;
-	font-family: 'Open Sans', cursive;
-    font-weight: 400;
+	font-family: "Josefin Sans", sans-serif;
+    font-weight: 600;
     overflow-x: hidden; 
 }
 ol, ul {
@@ -27,27 +27,28 @@ table {
 #banner{
     background: url(../img/bar.jpg) no-repeat center top;
     background-size: cover;
-    min-Beight: 630px;
+    min-height: 630px;
 }
 .bg-color{
     background-color: RGBA(0, 0, 0, 0.61);
     min-height: 630px;
 }
 #banner h2{
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     font-size: 45px;
     color:#ffcc4f;
 }
 #banner p{
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     color: #fcfcfc;
     font-size: 34px;
 }
 .section-padding{
     padding: 60px 0px;
+    background-color: #85F6F6;
 }
 .logo-name{
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     font-size: 65px;
     margin-top: 140px;
     color:#ffcc4f;
@@ -97,7 +98,7 @@ table {
 .header-h {
     color:#ffcc4f;
     font-size: 46px;
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     font-weight: 300;
 }
 .header-p {
@@ -177,6 +178,7 @@ table {
     background-position: center bottom, center calc(100% - 1px);
     background-color: rgba(0, 0, 0, 0);
     -webkit-transition: background 0s ease-out;
+    -moz-transition: background 0s ease-out;
     -o-transition: background 0s ease-out;
     transition: background 0s ease-out;
     float: none;
@@ -199,7 +201,7 @@ table {
     height: 54px;
     border-radius: 3px;
     font-size: 16px;
-    font-family: 'Roboto', cursive;
+    font-family: 'Lobster Two', cursive;
     font-weight: normal;
     text-transform: capitalize;
     border: 0px;
@@ -247,7 +249,7 @@ table {
 
 
 .heading{
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     color:#ffcc4f;
     font-size: 24px;
 }
@@ -263,7 +265,7 @@ table {
 }
 #about img
 {
-    border: 5px solid #ffcc4f;
+    border: 5px solid #F80071;
     border-radius: 2px;
 }
 #event{
@@ -290,7 +292,7 @@ table {
     color:#ffcc4f;
     font-size: 32px;
     padding-bottom: 15px;
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
 }
 .content-holder address strong {
     color:#ffcc4f;
@@ -302,84 +304,14 @@ table {
     letter-spacing: 1px;
     font-weight: 300;
 }
-.btn-read-more {
-    background:#ffcc4f;
-    padding: 7px 19px;
-    font-family: 'Roboto', cursive;
-    font-size: 12px;
-    line-height: 17px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    border-radius: 3px;
-    color: #000;
-    text-transform: uppercase;
-    margin-top: 10px;
-}
-.btn-read-more:hover
-{
-    color: #000;
-}
+
+
 #Container .mix{
     display: none;
 }
-.menu-restaurant{
-    width: 50%;
-    float: left;
-    padding: 15px;
-    position: relative;
-}
-.menu-restaurant .menu-title {
-    float: left;
-    font-family: Montserrat,arial;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color:#ffcc4f;
-}
-.menu-restaurant .menu-line {
-    position: absolute;
-    bottom: 6px;
-    border-bottom: 1px dotted rgba(0,0,0,.3);
-    margin-left: .6rem;
-    margin-right: .6rem;
-}
-.menu-restaurant .menu-price {
-    font-weight: 600;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.menu-restaurant .menu-subtitle {
-    display: block;
-    float: left;
-    color: #B1B1B1;
-    font-family: Lobster,'Open Sans',arial;
-    font-size: 1.2rem;
-}
-.menu-restaurant span.clearfix {
-    position: relative;
-    display: block;
-}
-.gallery-trigger ul li a.active, .gallery-trigger ul li a:hover {
-    background:#ffcc4f;
-    color: #fff;
-    border: 1px solid#ffcc4f;
-}
-.gallery-trigger ul li {
-    display: inline-block;
-    color: #fff;
-    text-transform: capitalize;
-    letter-spacing: 1px;
-    margin-bottom: 40px;
-}
-.gallery-trigger ul li a {
-    padding: 10px 20px;
-    font-size: 14px;
-    color: #565656;
-    border-radius: 0px;
-    border: 1px solid #BBBBBB;
-    text-decoration: none;
-    cursor: pointer;
-}
+
+
+
 .footer {
     width: 100%;
     background-color: #222;
